--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Signup Page</h1>
+    <h1>About Page</h1>
     <h2>Hello World!</h2>
   </body>
 </html>
