--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   </head>
   <body>
     <section class="wrapper">
-      <div class="small-box box"></div>
-      <div class="box"></div>
+      <h1>Hello World!</h1>
     </section>
   </body>
 </html>
