--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section class="wrapper">
-      <h1>Hello World!</h1>
+      <h1>Hello learning GIT is fun.</h1>
     </section>
   </body>
 </html>
