--- a/signup.html
+++ b/signup.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <h1>Signup Page</h1>
-    <h2>Hello World!</h2>
+    <h2>Let's signup and start learning.</h2>
   </body>
 </html>
