Update the project

--- a/about.html
+++ b/about.html
@@ -10,5 +10,11 @@
   <body>
     <h1>About Page</h1>
     <h2>How about the About Page.</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim
+      consequuntur facere consequatur minima tempore, architecto sunt eveniet
+      adipisci aliquam hic error necessitatibus mollitia accusamus quaerat
+      recusandae suscipit magnam doloremque repudiandae.
+    </p>
   </body>
 </html>
