--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <body>
     <section class="wrapper">
       <h1>Hello learning GIT is fun.</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, quod?
+        Quo ad culpa quasi accusantium commodi id placeat doloremque, ratione
+        earum laudantium. Eius consequatur cupiditate aut iste, possimus officia
+        fugit.
+      </p>
     </section>
   </body>
 </html>
