--- a/signup.html
+++ b/signup.html
@@ -10,5 +10,10 @@
   <body>
     <h1>Signup Page</h1>
     <h2>Let's signup and start learning.</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque minima
+      iste sit, similique incidunt, ipsa vitae libero nobis voluptates dolor
+      beatae, ipsum vero est debitis amet odit. Odio, tempora consequuntur.
+    </p>
   </body>
 </html>
