--- a/news.html
+++ b/news.html
@@ -11,6 +11,12 @@
     <h1>Our Recent News!</h1>
     <article>
       <h2>Welcome to the git!</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste error
+        excepturi quo praesentium adipisci illum ad, nesciunt officiis, odit
+        magni saepe nostrum vel ut distinctio perspiciatis, tenetur est nobis?
+        Adipisci!
+      </p>
     </article>
   </body>
 </html>
